<resources>
    <string name="app_name">Domo-Think</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="apiUrl">http://10.0.3.2:8080/api/</string>

    <string name="directive_creation">Directive creation</string>
    <string name="add">Add</string>
    <string name="research">Research</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="domobox_identifier">Domobox identifier</string>
    <string name="forgotten_password">Forgotten password</string>
    <string name="create_account">Create account</string>
    <string name="deleting_directive">Deleting directive</string>
    <string name="do_you_really_directive">Do you really want to delete this directive ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="removing_plugin">Removing plugin</string>
    <string name="do_you_really_plugin">Do you really want to remove this plugin ?</string>
    <string name="deleting_object">Deleting object</string>
    <string name="do_you_really_object">Do you really want to delete this object ?</string>
    <string name="directive_edition">Directive edition</string>
    <string name="edit">Edit</string>
    <string name="objects">Objects</string>
    <string name="directives">Directives</string>
    <string name="plugins">Plugins</string>
    <string name="store">Store</string>
    <string name="updates">Updates</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="install">Install</string>
    <string name="my_plugins">My plugins</string>
    <string name="actual_version">Actual version: </string>
    <string name="notifications">Notifications</string>
    <string name="available_update">New update available !</string>
    <string name="confirm_password">Confirm password</string>
    <string name="box_key">Box key</string>
    <string name="creating_account">Creating account</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="password_changed">Password changed</string>
    <string name="email_sent">An email has been sent</string>
    <string name="go">GO</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="validate_username">Validate username</string>
    <string name="updating">Updating</string>
    <string name="uptodate">Up to date !</string>
    <string name="wrong_identifiers">Wrong identifiers</string>
    <string name="account_not_found">Account not found</string>
    <string name="updating_name">Updating name</string>
    <string name="unable_save_name">Unable to save the name</string>
    <string name="add_device">Adding device</string>
    <string name="do_you_really_add_device">Do you really want to add this device ?</string>
    <string name="unable_create_account">Unable to create account</string>
    <string name="unable_connect">Unable to connect. Identifiers may be wrong.</string>
    <string name="unable_change_password">Unable to change password</string>
    <string name="plugin_detail">Plugin detail</string>
    <string name="delete_account">Delete account</string>
    <string name="do_you_really_delete_account">Do you really want to delete your account ?</string>
    <string name="no_directive_found">No directive found</string>
    <string name="no_device_found">No device found</string>
    <string name="request_failed">Request failed</string>
    <string name="directive_name_empty">Directive name is empty</string>
    <string name="new_confirm_password_differ">New and confirm password aren\'t the same</string>
    <string name="old_new_password_differ">Old and new password are the same</string>
    <string name="already_current_password">This is already your current password</string>
    <string name="dashboard">Dashboard</string>
    <string name="unable_add_object">Unable to add object</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="check_update">Checking update</string>
    <string name="searching_update">Looking for updates</string>
    <string name="waiting">Waiting</string>
    <string name="newUpdate">New update found !</string>
    <string name="newUpdateButton">Install new update</string>
    <string name="noUpdate">You\'re up to date</string>
    <string name="noUpdateButton">Nothing to do</string>
    <string name="turnOn">Turn on</string>
    <string name="turnOff">Turn off</string>
    <string name="now">Now</string>
    <string name="weekly">Weekly</string>
    <string name="alreadyInstalled">Already installed</string>
    <string name="unableToInstall">Unable to install</string>
    <string name="forbidden">Forbidden</string>
</resources>
