<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/username"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:textColor="@color/grey"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/grey"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/confirm"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/grey"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/box_key"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/box_key"
        android:textColor="@color/grey"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/validate"
        android:background="@color/domoBlue"
        android:layout_above="@+id/box_key"
        android:textColor="@color/white"
        android:textSize="15dp" />

    </LinearLayout>

</ScrollView>
